--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native-stack": "^6.9.17",
     "react": "18.2.0",
     "react-native": "0.72.7",
+    "react-native-date-picker": "^4.3.4",
     "react-native-paper": "^5.11.3",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
